--- a/index.html
+++ b/index.html
@@ -12,7 +12,21 @@
         <h2>OpenPGP Public Keys</h2>
         <p>Here is a collection of OpenPGP Public Keys of which I own. If you have the missfortune of seeing me, please use these as I'd rather encrypt messages.</p>
         <ul>
-            <li>Discord <a href="downloads/Ascellayn_Discord.asc" target="_blank">[Download]</a></li>
+            <li>
+                <div>
+                    <p><b>Discord</b> <a href="downloads/Ascellayn_Discord.asc" target="_blank">[Download]</a></p>
+                    <p><u>Additional Information:</u></p>
+                    <code>
+                        <ul>
+                            <li>Fingerprint: 2065 46D8 974D DD75 D14C AE80 015A B18A 352C 8B94</li>
+                            <br>
+                            <li>SHA256: 13631736da12934b1fe56dc91753a4560712b37f1355d5699ac73b1e6aaf8032</li>
+                            <li>SHA1: 0bfca844b13ea7c967c57549beaf5e2d16984fc5</li>
+                            <li>MD5: 46b756ab17cbdd15deb2189c7638ac5a</li>
+                        </ul>
+                    </code>
+                </div>
+            </li>
         </ul>
     </body>
 </html>
